# reth-proofs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.adoc  build-all.sh  entrypoint.sh  flake.nix
assets/: .gitignore  22694900_full-block.json  22724090_full-block.json  22815400_full-block.json  22830000_full-block.json
core/: Cargo.toml
core/src/: input.rs  input_alt.rs  lib.rs  mpt.rs  triedb.rs
ethproofs/: Cargo.toml
ethproofs/src/: lib.rs
gevulot/: .env.example  Cargo.toml  build.rs
gevulot/src/: alerting.rs  cli.rs  eth_proofs.rs  main.rs  sp1.rs  worker_prepare.rs  worker_prove.rs
gevulot2/: .env.example  Cargo.toml  build.rs
gevulot2/src/: cli.rs  main.rs
gevulot3/: .env.example  Cargo.toml
gevulot3/src/: cli.rs  main.rs  zisk.rs
guest/sp1/: Cargo.toml
guest/sp1/src/: main.rs
prototype/: Cargo.toml
prototype/src/: lib.rs  main.rs  mpt.rs  triedb.rs  triedb_tests.rs  triedb_utils.rs  utils.rs
reth-trie-risc0-zkvm/: Cargo.toml  README.adoc
reth-trie-risc0-zkvm/src/: lib.rs  mpt.rs
reth-trie-sp1-zkvm/: Cargo.toml  README.adoc
reth-trie-sp1-zkvm/src/: lib.rs  mpt.rs
risc0-ethereum-trie/: Cargo.toml
risc0-ethereum-trie/src/: lib.rs
risc0-ethereum-trie/src/mpt/: mod.rs  node.rs  prune.rs
src/: lib.rs  main.rs  mpt.rs  triedb.rs  triedb_utils.rs  utils.rs
subblock/: Cargo.toml
subblock/src/: main.rs  tracking_trie.rs  witness_db.rs
zkvm-common-guest/: Cargo.toml  README.adoc
zkvm-common-guest/src/: lib.rs
zkvm-common-host/: Cargo.toml
zkvm-common-host/src/: lib.rs
zkvm/risc0-guest/: Cargo.toml
zkvm/risc0-guest/src/: main.rs
zkvm/risc0-host/: Cargo.toml  build.rs
zkvm/risc0-host/src/: main-bonsai.rs  main-recursive.rs  main.rs
zkvm/risc0-methods/: Cargo.toml  build.rs
zkvm/risc0-methods/guest/: Cargo.toml
zkvm/risc0-methods/guest/src/: main.rs
zkvm/sp1-alt-guest/: Cargo.toml
zkvm/sp1-alt-guest/src/: main.rs
zkvm/sp1-alt-host/: Cargo.toml  build.rs
zkvm/sp1-alt-host/src/: main.rs
zkvm/sp1-guest/: Cargo.toml
zkvm/sp1-guest/src/: main.rs
zkvm/sp1-host/: Cargo.toml  build.rs
zkvm/sp1-host/src/: main.rs
zkvm/zisk-guest/: Cargo.toml
zkvm/zisk-guest/src/: kzg.rs  main.rs
