[workspace]
members = [
  "core",
  "zkvm/sp1-guest",
  "zkvm/sp1-host",
  "prototype",
]
resolver = "3"

[workspace.dependencies]
reth-proofs-core = { path = "./core" }
reth-proofs = { path = "./prototype" }

# Asynchronous runtime.
tokio = { version = "1.45.1", default-features = false, features = ["rt-multi-thread"] }

# Ethereum serialization.
# TODO: Remove once switched to `alloy-rlp` in MPT implementation.
rlp = { version = "0.6.1", default-features = false, features = ["std"] }

# Error handling.
thiserror = { version = "2.0.12", default-features = false }

# Serialization.
bincode = { version = "1.3.3", default-features = false }
serde = { version = "1.0.219", default-features = false }
serde_json = { version = "1.0.140", default-features = false }
serde_with = { version = "3.13.0", default-features = false }

# zkVM.
sp1-sdk = { version = "5.0.6", default-features = false, features = ["profiling"] }
sp1-build = { version = "5.0.5", default-features = false }
sp1-zkvm = { version = "5.0.5", default-features = false, features = ["lib"] }

# NOTE: Version of alloy/revm/reth crates is based on reth v1.4.8:
# - https://github.com/paradigmxyz/reth/blob/v1.4.8/Cargo.toml

# alloy
alloy-consensus = { version = "1.0.9", default-features = false, features = ["serde", "serde-bincode-compat"] }
alloy-genesis = { version = "1.0.9", default-features = false }
alloy-rlp = { version = "0.3.10", default-features = false }
alloy-primitives = { version = "1.1.0", default-features = false, features = ["map-foldhash", "sha3-keccak"] } # `sha3-keccak` is required to use SP1 precompile.
alloy-provider = { version = "1.0.9", default-features = false, features = ["reqwest", "debug-api"] }
alloy-rpc-types-debug = { version = "1.0.9", default-features = false }
alloy-rpc-types-eth = { version = "1.0.9", default-features = false }

# revm
revm = { version = "24.0.1",  default-features = false, features = ["serde", "kzg-rs", "bn"] }

# reth
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.8", default-features = false }
reth-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.8", default-features = false, features = ["evm"] }
reth-ethereum-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.8", default-features = false }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.8", default-features = false, features = ["serde", "serde-bincode-compat"] }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.8", default-features = false }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.8", default-features = false, features = ["serde", "serde-bincode-compat"] }
reth-trie = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.8", default-features = false }
reth-stateless = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.8", default-features = false }

[patch.crates-io]
# SP1 precompiles.
sha3 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", tag = "patch-sha3-0.10.8-sp1-4.0.0" }
