[workspace]
members = [
  "core",
  "gevulot",
  "zkvm/risc0-host",
  "zkvm/risc0-guest",
  "zkvm/sp1-guest",
  "zkvm/sp1-host",
  "prototype",
]
resolver = "3"

[workspace.dependencies]
reth-proofs-core = { path = "./core" }
reth-proofs = { path = "./prototype" }

# Asynchronous runtime.
tokio = { version = "1.45.1", default-features = false, features = ["rt-multi-thread", "macros"] }

# Ethereum serialization.
# TODO: Remove once switched to `alloy-rlp` in MPT implementation.
rlp = { version = "0.6.1", default-features = false }

# Error handling.
thiserror = { version = "2.0.12", default-features = false }

# Serialization.
bincode = { version = "1.3.3", default-features = false }
serde = { version = "1.0.219", default-features = false }
serde_json = { version = "1.0.140", default-features = false }
serde_with = { version = "3.13.0", default-features = false }

# zkVM.
sp1-cuda = { version = "5.0.5", default-features = false }
sp1-sdk = { version = "5.0.6", default-features = false, features = ["profiling"] }
sp1-build = { version = "5.0.5", default-features = false }
sp1-zkvm = { version = "5.0.5", default-features = false, features = ["lib"] }

# zkVM.
risc0-zkvm = { version = "3.0.0-rc.1", default-features = false, features = ["unstable"] }

# NOTE: Version of alloy/revm/reth crates is based on reth v1.5.0:
# - https://github.com/paradigmxyz/reth/blob/v1.5.0/Cargo.toml

# alloy
alloy-consensus = { version = "1.0.13", default-features = false, features = ["serde", "serde-bincode-compat"] }
alloy-genesis = { version = "1.0.13", default-features = false }
alloy-rlp = { version = "0.3.10", default-features = false }
alloy-primitives = { version = "1.2.0", default-features = false, features = ["map-foldhash", "tiny-keccak", "k256"] } # `sha3-keccak` is required to use SP1 precompile; `tiny-keccak` is for Risc0 precompile.
alloy-provider = { version = "1.0.13", default-features = false, features = ["reqwest", "debug-api"] }
alloy-rpc-types-debug = { version = "1.0.13", default-features = false }
alloy-rpc-types-eth = { version = "1.0.13", default-features = false }
alloy-trie = { version = "0.9.0", default-features = false }

# revm
revm = { version = "26.0.1",  default-features = false, features = ["serde", "bn"] } # "kzg-rs" for SP1!

# reth
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0", default-features = false }
reth-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0", default-features = false, features = ["evm"] }
reth-ethereum-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0", default-features = false }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0", default-features = false, features = ["serde", "serde-bincode-compat"] }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0", default-features = false }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0", default-features = false, features = ["serde", "serde-bincode-compat"] }
reth-trie = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0", default-features = false }
reth-trie-common = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0", default-features = false }
reth-stateless = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0", default-features = false }

# misc
nybbles = { version = "0.3.0", default-features = false }

[patch.crates-io]
## Two crucial SP1 precompiles.
#sha3 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", tag = "patch-sha3-0.10.8-sp1-4.0.0" }
#k256 = { git = "https://github.com/sp1-patches/elliptic-curves", tag = "patch-k256-13.4-sp1-5.0.0" }
#
## Additional SP1 precompiles.
#bn = { git = "https://github.com/sp1-patches/bn", tag = "patch-0.6.0-sp1-5.0.0", package = "substrate-bn" } # Only 100k cycles improvement.
##p256 = { git = "https://github.com/sp1-patches/elliptic-curves", tag = "patch-p256-13.2-sp1-5.0.0" } # No cycles improvement.
##sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", tag = "patch-sha2-0.10.8-sp1-4.0.0", package = "sha2" } # Potentially -30k cycles.

# First crucial Risc0 precompile - half of cycles reduced!
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.4-risczero.1" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }

# Accelerate Risc0 bn - only 3M cycles reduced.
substrate-bn = { git = "https://github.com/risc0/paritytech-bn", tag = "v0.6.0-risczero.0" }

# Accelerate Risc0 keccak (fix for alloy primitives required...).
tiny-keccak = { git = "https://github.com/risc0/tiny-keccak", tag = "tiny-keccak/v2.0.2-risczero.0" }
alloy-primitives = { git = "https://github.com/koxu1996/alloy-rs-core.git", branch = "v1.2.1-no-sha3" }

# Other Risc0 precompiles - probably not needed.
blst = { git = "https://github.com/risc0/blst", tag = "blst/v0.3.14-risczero.0" }
c-kzg = { git = "https://github.com/risc0/c-kzg-4844.git", tag = "c-kzg/v2.1.1-risczero.0" }
sha2 = { git = "https://github.com/koxu1996/RustCrypto-hashes.git", tag = "sha2-v0.10.9-fake-risczero.0" }
