[workspace]
members = [
  "core",
  "ethproofs",
  "gevulot2",
  "gevulot3",
  "zkvm/risc0-host",
  "zkvm-common-guest",
  "zkvm-common-host",
  "prototype",
  "reth-trie-risc0-zkvm",
  "risc0-ethereum-trie"
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
ethproofs-api = { path = "./ethproofs" }
reth-proofs-core = { path = "./core" }
reth-proofs = { path = "./prototype" }
reth-proofs-zkvm-common-host = { path = "./zkvm-common-host" }
reth-trie-risc0-zkvm = { path = "./reth-trie-risc0-zkvm" }
risc0-ethereum-trie = { path = "./risc0-ethereum-trie" }

# Asynchronous runtime.
tokio = { version = "1.45.1", default-features = false, features = ["rt-multi-thread", "macros"] }

# Ethereum serialization.
# TODO: Remove once switched to `alloy-rlp` in MPT implementation.
rlp = { version = "0.6.1", default-features = false }

# Error handling.
thiserror = { version = "2.0.12", default-features = false }

# Serialization.
bincode = { version = "1.3.3", default-features = false }
serde = { version = "=1.0.226", default-features = false }
serde_json = { version = "1.0.140", default-features = false }
serde_with = { version = "3.13.0", default-features = false }

# zkVM.
risc0-zkvm = { version = "3.0.3", default-features = false, features = ["unstable"] }
risc0-build = { version = "=3.0.3", git = "https://github.com/koxu1996/risc0.git", branch = "feature/simpler-guest-integration-v3.0.3", default-features = false, features = ["unstable"] }

# NOTE: Version of alloy/revm/reth/crypto crates is based on reth v1.9.3:
# - https://github.com/paradigmxyz/reth/blob/v1.9.3/Cargo.toml

# alloy
alloy-consensus = { version = "1.0.41", default-features = false, features = ["serde", "serde-bincode-compat"] }
alloy-genesis = { version = "1.0.41", default-features = false }
alloy-rlp = { version = "0.3.10", default-features = false }
alloy-primitives = { version = "1.4.1", default-features = false }
alloy-provider = { version = "1.0.41", default-features = false, features = ["reqwest", "debug-api"] }
alloy-rpc-types-debug = { version = "1.0.41", default-features = false }
alloy-rpc-types-eth = { version = "1.0.41", default-features = false }
alloy-trie = { version = "0.9.1", default-features = false }
alloy-signer = { version = "1.0.41", default-features = false }

# crypto
k256 = { version = "0.13", default-features = false }

# revm
revm = { version = "31.0.2",  default-features = false, features = ["serde"] }
# In case of armeabi7 - c-kzg does not compile due to missing std
# What about: "secp256k1", "blst"...

# reth
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", default-features = false }
reth-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", default-features = false }
reth-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", default-features = false, features = ["evm"] }
reth-ethereum-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", default-features = false }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", default-features = false, features = ["serde", "serde-bincode-compat"] }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", default-features = false }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", default-features = false, features = ["serde", "serde-bincode-compat"] }
reth-trie = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", default-features = false }
reth-trie-common = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", default-features = false }
reth-stateless = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", default-features = false }

# misc
itertools = { version = "0.14", default-features = false }
nybbles = { version = "0.4.2", default-features = false }
rayon = { version = "1.7", default-features = false }
