[package]
name = "reth-proofs-core"
version = "0.1.0"
edition = "2024"

[dependencies]

# alloy
alloy-consensus = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rlp = { workspace = true }
alloy-trie = { workspace = true }

# reth
reth-chainspec = { workspace = true }
reth-ethereum = { workspace = true }
reth-ethereum-primitives = { workspace = true }
reth-primitives-traits = { workspace = true }

# misc
nybbles = { workspace = true }

# Ethereum serialization.
# TODO: Remove once switched to `alloy-rlp` in MPT implementation.
rlp = { workspace = true }

# Serialization.
serde = { workspace = true }
serde_with = { workspace = true }
