[package]
name = "reth-proofs-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]

# alloy
alloy-consensus = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rlp = { workspace = true }
alloy-rpc-types-debug = { workspace = true }
alloy-signer = { workspace = true }

# crypto
k256 = { workspace = true, features = ["serde", "pem"] } # Both `serde` and `pem` required for serialization.

# reth
reth-chainspec = { workspace = true }
reth-ethereum = { workspace = true }
reth-ethereum-consensus = { workspace = true }
reth-execution-types = { workspace = true }
reth-ethereum-primitives = { workspace = true }
reth-primitives-traits = { workspace = true }
reth-stateless = { workspace = true }
reth-trie-common = { workspace = true }

# revm
revm = { workspace = true }

# Reth Proofs
reth-trie-sp1-zkvm = { workspace = true }
reth-trie-risc0-zkvm = { workspace = true }

# Serialization.
serde = { workspace = true }
serde_with = { workspace = true }
