[package]
name = "reth-proofs-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
parallel = ["dep:rayon", "reth-trie-risc0-zkvm/parallel"]

[dependencies]

# alloy
alloy-consensus = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rlp = { workspace = true }
alloy-rpc-types-debug = { workspace = true }

# crypto
k256 = { workspace = true, features = ["serde", "pem"] } # Both `serde` and `pem` required for serialization.

# reth
reth-chainspec = { workspace = true }
reth-ethereum = { workspace = true }
reth-ethereum-consensus = { workspace = true }
reth-execution-types = { workspace = true }
reth-ethereum-primitives = { workspace = true }
reth-primitives-traits = { workspace = true }
reth-stateless = { workspace = true }
reth-trie-common = { workspace = true }

# revm
revm = { workspace = true }

# misc
rayon = { workspace = true, optional = true }

# Reth Proofs
reth-trie-risc0-zkvm = { workspace = true }

# Serialization.
serde = { workspace = true }
serde_with = { workspace = true }

# For some reason, this is required to build in Nix flake (also fixes ZisK build).
critical-section = { version = "1.2", features = ["std"] }
