[package]
name = "reth-proofs-gevulot"
version = "0.1.0"
edition = "2024"

[dependencies]
# alloy
alloy-provider = { workspace = true, features = ["ws", "reqwest-default-tls"] }

# Asynchronous runtime.
tokio = { workspace = true }
tokio-util = { version = "0.7", default-features = false }
futures = { version = "0.3.31", default-features = false }

# CLI parsing.
clap = { version = "4.5.40", features = ["derive", "env"] }

# Error handling.
eyre = { version = "0.6.12", default-features = false }

# Logging.
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = { version = "0.3.19", default-features = false }

# Reth Proofs.
reth-proofs = { workspace = true }

# Serialization.
bincode = { workspace = true }

# URL parsing.
url = { version = "2.5.4", default-features = false }

# zkVM.
sp1-sdk = { workspace = true }

[build-dependencies]
# zkVM.
sp1-build = { workspace = true }
