[package]
name = "reth-proofs-gevulot"
version = "0.1.0"
edition = "2024"

[dependencies]
# alloy
alloy-provider = { workspace = true, features = ["ws", "reqwest-default-tls"] }

# Asynchronous channels.
async-channel = { version = "2.3.1", default-features = false, features = ["std"] }

# Asynchronous runtime.
tokio = { workspace = true }
tokio-util = { version = "0.7", default-features = false }
futures = { version = "0.3.31", default-features = false }

# CLI parsing.
clap = { version = "4.5.40", features = ["derive", "env"] }

# Environment configuration.
dotenv = { version = "0.15.0", default-features = false }

# Error handling.
eyre = { version = "0.6.12", default-features = false }
backon = { version = "1.5.1", default-features = false, features = ["tokio-sleep"] }

# Hashing.
base64 = { version = "0.22.1", default-features = false }

# Logging.
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = { version = "0.3.19", default-features = false }

# REST client.
reqwest = { version = "0.12.20", default-features = false, features = ["default-tls", "json"] }
reqwest-middleware = { version = "0.4.2", default-features = false, features = ["json"] }

# Reth Proofs.
reth-proofs = { workspace = true }
reth-proofs-core = { workspace = true }

# Serialization.
bincode = { workspace = true }

# URL parsing.
url = { version = "2.5.4", default-features = false }

# zkVM.
sp1-sdk = { workspace = true }
sp1-cuda = { workspace = true }

[build-dependencies]
# zkVM.
sp1-build = { workspace = true }
