[package]
name = "reth-proofs-gevulot2"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# alloy
alloy-provider = { workspace = true, features = ["ws", "reqwest-default-tls"] }

# Asynchronous runtime.
tokio = { workspace = true }
futures = { version = "0.3.31", default-features = false }

# CLI parsing.
clap = { version = "4.5.40", features = ["derive", "env"] }

# Environment configuration.
dotenv = { version = "0.15.0", default-features = false }

# Error handling.
eyre = { version = "0.6.12", default-features = false, features = ["auto-install"] }

# Ethproofs.
ethproofs-api = { workspace = true }

# Logging.
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["fmt", "env-filter"] }

# Reth Proofs.
reth-proofs = { workspace = true }
reth-proofs-core = { workspace = true }

# Serialization.
bincode = { workspace = true }
serde_json = { workspace = true }

# URL parsing.
url = { version = "2.5.4", default-features = false }

# zkVM.
risc0-zkvm = { workspace = true, features = ["prove", "bonsai"] }

# SDK for proving with Bento/Bonsai.
bonsai-sdk = { version = "1.4.1-rc.1", features = ["non_blocking"] }

[build-dependencies]

# zkVM.
risc0-build = { workspace = true }
