[package]
name = "reth-proofs-gevulot3"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# alloy
alloy-provider = { workspace = true, features = ["ws", "reqwest-default-tls"] }

# Asynchronous runtime.
tokio = { workspace = true, features = ["signal"] }
tokio-util = { version = "0.7", default-features = false }
futures = { version = "0.3.31", default-features = false }
async-channel = { version = "2.3.1", default-features = false }

# CLI parsing.
clap = { version = "4.5.40", features = ["derive", "env"] }

# Environment configuration.
dotenv = { version = "0.15.0", default-features = false }

# Error handling.
eyre = { version = "0.6.12", default-features = false, features = ["auto-install"] }

# Ethproofs.
ethproofs-api = { workspace = true }

# Logging.
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["fmt", "env-filter"] }

# Reth Proofs.
reth-proofs = { workspace = true }
reth-proofs-core = { workspace = true }

# Serialization.
bincode = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# URL parsing.
url = { version = "2.5.4", default-features = false }

# UUID.
uuid = { version = "1.18.1", default-features = false }

# ZisK coordination.
anyhow = { version = "1.0.100", default-features = false }
axum = { version = "0.8.4", default-features = false, features = ["json", "tokio", "http1"] }
tonic = { version = "0.14.2", default-features = false, features = ["server", "channel"] }
zisk-distributed-grpc-api = { git = "https://github.com/0xPolygonHermez/zisk.git", branch = "pre-develop-0.14.0" }
