[package]
name = "reth-proofs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]

# alloy
alloy-consensus = { workspace = true }
alloy-genesis = { workspace = true }
alloy-rlp = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
alloy-rpc-types-debug = { workspace = true }
alloy-rpc-types-eth = { workspace = true }

# revm
revm = { workspace = true }

# reth
reth-chainspec = { workspace = true }
reth-ethereum = { workspace = true }
reth-ethereum-consensus = { workspace = true }
reth-execution-types = { workspace = true }
reth-primitives-traits = { workspace = true }
reth-trie = { workspace = true }
reth-stateless = { workspace = true }

# Asynchronous runtime.
tokio = { workspace = true }

# Error handling.
thiserror = { workspace = true }

# Serialization.
serde = { workspace = true }
serde_json = { workspace = true }

# Reth Proofs.
reth-proofs-core = { workspace = true }
