[package]
name = "reth-trie-risc0-zkvm"
version = "0.1.0"
edition = "2024"

[features]
default = []
std = []

[dependencies]

# alloy
alloy-primitives = { workspace = true }
alloy-rlp = { workspace = true }
alloy-rpc-types-debug = { workspace = true }
alloy-trie = { workspace = true }

# reth
reth-ethereum = { workspace = true }
reth-stateless = { workspace = true }
reth-trie-common = { workspace = true }

# revm
revm = { workspace = true }

# misc
nybbles = { workspace = true }
serde = { workspace = true }

# to be deprecated in favor of alloy-rlp
rlp = { version = "0.6.1", default-features = false }

# Zeth trie. // git = "https://github.com/risc0/risc0-ethereum"
# CAUTION: Do NOT use `rlp_serialize` as it performs *full* tree validation - we want to do it manually (almost two times faster).
# NOTE: We do NOT need `orphan` functionality, as reth's witness provides all the nodes we need.
risc0-ethereum-trie = { workspace = true, features = ["serde"] }
