[package]
name = "reth-trie-risc0-zkvm"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
std = []
parallel = ["dep:rayon"]

[dependencies]

# alloy
alloy-primitives = { workspace = true }
alloy-rlp = { workspace = true }
alloy-rpc-types-debug = { workspace = true }
alloy-trie = { workspace = true }

# reth
reth-ethereum = { workspace = true }
reth-stateless = { workspace = true }
reth-trie-common = { workspace = true }

# revm
revm = { workspace = true }

# misc
itertools = { workspace = true }
nybbles = { workspace = true }
serde = { workspace = true }
rayon = { workspace = true, optional = true }

# Zeth trie. // git = "https://github.com/risc0/risc0-ethereum"
# CAUTION: Do NOT use `rlp_serialize` as it performs *full* tree validation - we want to do it manually (almost two times faster).
# NOTE: We do NOT need `orphan` functionality, as reth's witness provides all the nodes we need.
risc0-ethereum-trie = { workspace = true, features = ["serde"] }
