[package]
name = "reth-trie-sp1-zkvm"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
std = []

[dependencies]

# alloy
alloy-primitives = { workspace = true }
alloy-rlp = { workspace = true }
alloy-rpc-types-debug = { workspace = true }
alloy-trie = { workspace = true }

# reth
reth-ethereum = { workspace = true }
reth-stateless = { workspace = true }
reth-trie-common = { workspace = true }

# revm
revm = { workspace = true }

# misc
itertools = { workspace = true }
nybbles = { workspace = true }
serde = { workspace = true }

# to be deprecated in favor of alloy-rlp
rlp = { version = "0.6.1", default-features = false }
