[package]
name = "reth-proofs-zkvm-common-guest"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# reth
reth-ethereum = { workspace = true }
reth-stateless = { workspace = true }

# Reth Proofs
reth-proofs-core = { workspace = true }
reth-trie-risc0-zkvm = { workspace = true }

# Serialization.
bincode = { workspace = true }
