[package]
name = "reth-proofs-zkvm-common-guest"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
zkvm-risc0 = ["alloy-primitives/tiny-keccak", "revm/c-kzg"]
zkvm-sp1 = ["alloy-primitives/sha3-keccak", "revm/kzg-rs"]

[dependencies]
# reth
reth-ethereum = { workspace = true }
reth-stateless = { workspace = true }

# Reth Proofs
reth-proofs-core = { workspace = true }
reth-trie-risc0-zkvm = { workspace = true }

# Serialization.
bincode = { workspace = true }

# alloy - extra features for all zkVMs.
alloy-primitives = { workspace = true, features = ["map-foldhash", "k256"] }

# revm - extra features for all zkVMs.
revm = { workspace = true, default-features = false, features = ["bn"] }
