[package]
name = "reth-proofs-zkvm-common-guest"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
zkvm-risc0 = ["alloy-primitives/tiny-keccak"] # CAUTION: "revm/c-kzg" is not supported since revm v30.
zkvm-zisk = ["alloy-primitives/sha3-keccak"] # NOTE: KZG support is added manually inside final guest.

[dependencies]
# reth
reth-ethereum = { workspace = true }
reth-stateless = { workspace = true }

# Reth Proofs
reth-proofs-core = { workspace = true }
reth-trie-risc0-zkvm = { workspace = true }

# Serialization.
bincode = { workspace = true }

# alloy - extra features for all zkVMs.
alloy-primitives = { workspace = true, features = ["map-foldhash", "k256"] }

# reth
reth-consensus = { workspace = true }
reth-ethereum-consensus = { workspace = true }

# revm - extra features for all zkVMs.
revm = { workspace = true, default-features = false, features = ["bn"] }
