[package]
name = "reth-proofs-zkvm-risc0-guest"
version = "0.1.0"
edition = "2024"

[dependencies]
# zkVM.
risc0-zkvm = { version = "3.0.0-rc.1", default-features = false, features = ["std", "unstable"] }

# reth
reth-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0", default-features = false, features = ["evm"] }

# Reth Proofs
reth-proofs-core = { workspace = true }

# Serialization.
bincode = { version = "1.3.3", default-features = false }

# Extra packages to use precompiles.
c-kzg = { version = "=2.1.1", features = ["risc0-ffi"] }
blst = { version = "=0.3.14" }
