[package]
name = "reth-proofs-zkvm-risc0-guest"
version = "0.1.0"
edition = "2024"

[dependencies]
# zkVM.
risc0-zkvm = { workspace = true }

# reth
reth-ethereum = { workspace = true }

# Reth Proofs
reth-proofs-core = { workspace = true }

# Serialization.
bincode = { workspace = true }

# Extra packages to use precompiles.
c-kzg = { version = "=2.1.1", features = ["risc0-ffi"] }
blst = { version = "=0.3.14" }
