[package]
name = "reth-proofs-zkvm-risc0-guest"
version = "0.1.0"
edition = "2024"

# NOTE: We had to put it outside of the main workspace, to use different set of precompile patches.
[workspace]

# TODO: Experiment with different values to find the most optimal settings.
#[profile.release]
#codegen-units = 1
#debug = 1
#lto = "fat"

[dependencies]

# Guest code.
reth-proofs-zkvm-common-guest = { path = "../../zkvm-common-guest" }

# zkVM.
# TODO: Get rid of `std` when serde is no longer used.
risc0-zkvm = { version = "3.0.0-rc.1", default-features = false, features = ["unstable", "std"] }

# Extra packages to use precompiles.
c-kzg = { version = "=2.1.1", features = ["risc0-ffi"] }
blst = { version = "=0.3.14" }

[patch.crates-io]

# First crucial Risc0 precompile - half of cycles reduced!
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.4-risczero.1" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }

# Accelerate Risc0 keccak (fix for alloy primitives required...).
tiny-keccak = { git = "https://github.com/risc0/tiny-keccak", tag = "tiny-keccak/v2.0.2-risczero.0" }
alloy-primitives = { git = "https://github.com/koxu1996/alloy-rs-core.git", branch = "v1.2.1-no-sha3" }

# Accelerate Risc0 bn - only 3M cycles reduced.
substrate-bn = { git = "https://github.com/risc0/paritytech-bn", tag = "v0.6.0-risczero.0" }

# Other Risc0 precompiles - probably not needed.
blst = { git = "https://github.com/risc0/blst", tag = "blst/v0.3.14-risczero.0" }
c-kzg = { git = "https://github.com/risc0/c-kzg-4844.git", tag = "c-kzg/v2.1.1-risczero.0" }
sha2 = { git = "https://github.com/koxu1996/RustCrypto-hashes.git", tag = "sha2-v0.10.9-fake-risczero.0" }
