[package]
name = "reth-proofs-zkvm-risc0-host"
version = "0.1.0"
edition = "2024"

[dependencies]
# alloy
alloy-consensus = { workspace = true }

# Asynchronous runtime.
tokio = { workspace = true }

# Reth Proofs
reth-proofs-core = { workspace = true }
reth-proofs = { workspace = true }
reth-proofs-zkvm-common-host = { workspace = true }

# Error handling.
anyhow = { version = "1.0.98", default-features = false }

# Logging.
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["std", "env-filter", "fmt"] }

# Serialization.
serde = { workspace = true }
bincode = { workspace = true }

# zkVM.
risc0-zkvm = { workspace = true, features = ["cuda", "prove"] }

[build-dependencies]
# zkVM.
risc0-build = { workspace = true }
