[package]
name = "reth-proofs-zkvm-risc0-host"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "reth-proofs-zkvm-risc0-host"
path = "./src/main.rs"

[[bin]]
name = "reth-proofs-zkvm-risc0-host-recursive"
path = "./src/main-recursive.rs"

[[bin]]
name = "reth-proofs-zkvm-risc0-host-bonsai"
path = "./src/main-bonsai.rs"

[features]
default = ["bonsai"]
cuda = ["risc0-zkvm/cuda"]
bonsai = ["bonsai-sdk"]

[dependencies]
# alloy
alloy-consensus = { workspace = true }

# Asynchronous runtime.
tokio = { workspace = true }

# Reth Proofs
reth-proofs-core = { workspace = true }
reth-proofs = { workspace = true }
reth-proofs-zkvm-common-host = { workspace = true }

# Error handling.
anyhow = { version = "1.0.98", default-features = false }

# Logging.
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["std", "env-filter", "fmt"] }

# Serialization.
serde = { workspace = true }
bincode = { workspace = true }

# zkVM.
risc0-zkvm = { workspace = true, features = ["prove"] }

# SDK for proving with Bento/Bonsai.
bonsai-sdk = { version = "1.4.0", features = ["non_blocking"], optional = true }

[build-dependencies]
# zkVM.
risc0-build = { workspace = true }
