[package]
name = "reth-proofs-zkvm-sp1-alt-host"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sp1-sdk = { workspace = true }

# alloy
alloy-consensus = { workspace = true }

# Asynchronous runtime.
tokio = { workspace = true }

# Reth Proofs
reth-proofs-core = { workspace = true }
reth-proofs = { workspace = true }
reth-proofs-zkvm-common-host = { workspace = true }

# Serialization.
bincode = { workspace = true }

[build-dependencies]
sp1-build = { workspace = true }
