[package]
name = "reth-proofs-zkvm-sp1-guest"
version = "0.1.0"
edition = "2024"

# NOTE: We had to put it outside of the main workspace, to use different set of precompile patches.
[workspace]

# TODO: Experiment with different values to find the most optimal settings.
#[profile.release]
#codegen-units = 1
#debug = 1
#lto = "fat"

[dependencies]

# Guest code.
reth-proofs-zkvm-common-guest = { path = "../../zkvm-common-guest" }

# zkVM.
sp1-zkvm = { version = "5.0.5", default-features = false, features = ["lib"] }

[patch.crates-io]

# Two crucial SP1 precompiles.
sha3 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", tag = "patch-sha3-0.10.8-sp1-4.0.0" }
k256 = { git = "https://github.com/sp1-patches/elliptic-curves", tag = "patch-k256-13.4-sp1-5.0.0" }

# Additional SP1 precompiles.
bn = { git = "https://github.com/sp1-patches/bn", tag = "patch-0.6.0-sp1-5.0.0", package = "substrate-bn" } # Only 100k cycles improvement.
p256 = { git = "https://github.com/sp1-patches/elliptic-curves", tag = "patch-p256-13.2-sp1-5.0.0" } # No cycles improvement.
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", tag = "patch-sha2-0.10.9-sp1-4.0.0", package = "sha2" } # Potentially -30k cycles.
