[package]
version = "0.1.0"
name = "reth-proofs-zkvm-sp1-host"
edition = "2024"

[dependencies]
sp1-sdk = { version = "5.0.6", default-features = false, features = ["profiling"] }

# alloy
alloy-consensus = { version = "1.0.9", default-features = false, features = ["serde", "serde-bincode-compat"] }

# Asynchronous runtime.
tokio = { version = "1.45.1", default-features = false, features = ["rt-multi-thread"] }

# Reth Proofs
reth-proofs-core = { workspace = true }
reth-proofs = { workspace = true }

# Serialization.
bincode = { version = "1.3.3", default-features = false }

[build-dependencies]
sp1-build = { version = "5.0.5", default-features = false }
